--- a/mobile_view.css
+++ b/mobile_view.css
@@ -568,6 +568,7 @@ nav a:hover{
 
 .page_5{
     height: 100vh;
+    background-color: rgb(246, 243, 237);
 }
 
 .contact_options{
